--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,11 @@ jobs:
 
       - name: Run Go tests
         run: go test ./...
+
+      - name: Install golint
+        run: go get golang.org/x/lint/golint
+
+      - name: Run golint
+        run: golint ./... | go run main.go golint
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
