--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,18 @@ jobs:
 
       - name: Run Go tests
         run: go test ./...
+
+      # TODO: Remove step once actions/setup-go adds $GOPATH/bin to $PATH by default
+      # See https://github.com/actions/setup-go/issues/14
+      - name: Add Go to $PATH
+        run: |
+          echo "::set-env name=GOPATH::$(go env GOPATH)"
+          echo "::add-path::$(go env GOPATH)/bin"
+
+      - name: Install golint
+        run: go get golang.org/x/lint/golint
+
+      - name: Run golint
+        run: golint ./... | go run main.go golint
+        env:
+          GITHUB_TOKEN: ${{ secrets.github_token }}
