--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -46,10 +46,10 @@ jobs:
       - name: Check .go files have license headers
         run: |
           git reset --hard HEAD
-          addlicense -f LICENSE **/*.go
+          addlicense -c "Rover.com" -l mit **/*.go
           GIT_DIFF="$(git diff --name-only)"
           if [[ -n "${GIT_DIFF}" ]]; then
-            echo "License headers needed (run 'addlicense -f LICENSE **/*.go' and commit):"
+            echo "License headers needed (run 'addlicense -c "Rover.com" -l mit **/*.go' and commit):"
             echo "${GIT_DIFF}"
             exit 2
           fi
