--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   coverage:
     runs-on: ubuntu-latest
+
+    steps:
       - name: Check out Git repository
         uses: actions/checkout@v2
 
